--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -133,4 +133,7 @@
   <data name="StatusAnnotations_Warning_32xLG_color" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StatusAnnotations_Warning_32xLG_color.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_42082" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\42082.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
